# rust-journald

./: Cargo.toml
examples/: basic_read.rs  tail.rs
src/: entry.rs  journal_entry.rs  journal_reader.rs  journal_writer.rs  lib.rs  reader.rs  writer.rs
tests/: journal.rs
