[package]
name = "journald"
version = "0.4.0"
authors = ["The rust-journald Authors <oss@nyantec.com>", "Cody P Schafer <dev@codyps.com>"]
license = "LGPL-2.1+"
description = "A rust binding for the systemd journald api"
repository = "https://github.com/nyantec/rust-journald"
documentation = "https://docs.rs/journald"
edition = "2018"

[features]
serde-integration = ["serde"]

[dependencies]
cstr-argument = "~0.0"
libc = "~0.2"
libsystemd-sys = "0.2"
log = "~0.4"
serde = { version = "1.0.89", features = ["derive"], optional = true }
utf8-cstr = "~0.1"
